<resources>
    <string name="app_name">GGP</string>
    <string name="put_youtube_video_link">분석하고 싶은 유튜브 동영상\n링크를 입력해주세요.</string>
    <string name="link_add">링크 추가</string>
    <string name="url_link_hint">여기에 링크를 입력해 주세요.</string>
    <string name="request_analyze">분석 요청</string>
    <string name="maximum_url_is_five">URL 분석은 최대 다섯 개까지 요청 가능합니다.</string>

    <string name="analyze_result">분석 결과</string>
    <string name="dangerous_notice">링크들의 댓글들을 분석해본 결과,\n다음의 위험에 노출되어 있습니다.</string>
    <string name="dangerous_score_before">당신의 위험도 지수는&#160;</string>
    <string name="dangerous_score_after">점 입니다.</string>
    <string name="watch_result_detail">결과 상세 보기</string>

    <string name="dangerous_comment_in_link">링크(들) 속 댓글들의 위험 요소들은\n다음과 같습니다.</string>
    <string name="dangerous_recommended_contents">노출된 위험 요소에 따라 다음의\n컨텐츠를 추천드립니다.</string>

    <string name="loading">로딩중입니다.\n잠시만\n기다려주세요.</string>

</resources>