<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="vm"
            type="com.khs.ggp.presentation.view.analysis.AnalysisViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/analysis_result_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/analyze_result"
            android:textColor="@color/black"
            android:textSize="29sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/analysis_result_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/dangerous_notice"
            android:textColor="@color/black"
            android:textSize="19sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/analysis_result_tv" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/analysis_dangerous_score_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/analysis_result_tv2">

            <TextView
                android:id="@+id/analysis_result_score_before_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dangerous_score_before"
                android:textColor="@color/black"
                android:textSize="19sp"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintEnd_toStartOf="@id/analysis_result_score_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/analysis_result_score_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{vm.dangerousScoreLiveData.toString()}"
                android:textColor="@color/red"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintEnd_toStartOf="@id/analysis_result_score_after_tv"
                app:layout_constraintStart_toEndOf="@+id/analysis_result_score_before_tv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/analysis_result_score_after_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dangerous_score_after"
                android:textColor="@color/black"
                android:textSize="19sp"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/analysis_result_score_tv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/analysis_result_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/analysis_dangerous_score_layout" />

        <Button
            android:id="@+id/analysis_watch_detail_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:padding="6dp"
            android:text="@string/watch_result_detail"
            android:textColor="@color/black"
            android:background="@drawable/selector_btn_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>